--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+	margin: 0px;
+	/*font-family: Orbitron;*/
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
