--- a/src/App/components/Header/index.css
+++ b/src/App/components/Header/index.css
@@ -1,8 +1,8 @@
 .main-title {
-	display: inline;
+	display: inline-block;
 	top: 0px;
 	left: 0px;
-	float: left;
+	/*float: left;*/
 	padding: 30px;
 	margin-bottom: 60px;
 	font-family: Orbitron;
