--- a/src/App/components/CoinModule/index.css
+++ b/src/App/components/CoinModule/index.css
@@ -1,10 +1,10 @@
 table {
   margin-left: auto;
 	margin-right: auto;
-	background-color: azure;
+	background-color: white;
 	border-radius: 14px;
 	width: 90%;
-	border: 15px solid azure;
+	border: 20px solid white;
 	border-spacing: 0px;
 	border-top: none;
 	border-bottom: none;
@@ -12,13 +12,18 @@ table {
 }
 
 table th {
+	border: 2px solid grey;
+	border-top: none;
+	border-left:none;
+	border-right: none;
+	text-align: right;
 	padding: 20px;
 }
 
 table td {
 	border-collapse: collapse; 
 	border-spacing: 0px;
-	text-align: center;
+	text-align: right;
 	border: 1px solid grey;
 	border-left: none;
 	border-right: none;
@@ -26,6 +31,17 @@ table td {
 	padding: 20px;
 }
 
+table th:first-child {
+	text-align: left;
+}
+
+table td:first-child {
+	text-align: left;
+}
+
+table tr:first-child td {
+  border-top: 0;
+}
 table tr:last-child td {
   border-bottom: 0;
 }
