background particles.js

--- a/src/App/components/CoinModule/index.css
+++ b/src/App/components/CoinModule/index.css
@@ -1,5 +1,7 @@
 table {
-  margin-left: auto;
+	position: relative;
+	z-index: 2;
+	margin-left: auto;
 	margin-right: auto;
 	background-color: white;
 	border-radius: 14px;
