--- a/src/App/components/Header/index.css
+++ b/src/App/components/Header/index.css
@@ -1,7 +1,7 @@
 .main-title {
 	position: relative;
 	z-index: 2;
-	background-color: white;
+	/*background-color: white;*/
 	display: inline-block;
 	top: 0px;
 	left: 0px;
