--- a/src/App/components/Header/index.css
+++ b/src/App/components/Header/index.css
@@ -6,6 +6,8 @@
 	top: 0px;
 	left: 0px;
 	padding: 30px;
+	padding-left: 40px;
+	padding-right: 40px;
 	margin-bottom: 60px;
 	font-family: Orbitron;
 	text-align: left;
