--- a/src/App/components/Background/index.css
+++ b/src/App/components/Background/index.css
@@ -1,10 +1,20 @@
 #particles-js {
+	/*
 	position: absolute;
 	z-index: -1;
 	opacity: 40%;
-	/*background-color: blue;*/
 	width: 100vw;
 	height: 100vh;
-	position: absolute;
-	z-index: -1;
+	background-size: cover;
+	background-attachment: fixed;
+	*/
+	width: 100%;
+  height: 100%;
+  position: fixed;
+  /*background-color: #000;*/
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+	z-index: 9;
+	opacity: 40%;
 }
