--- a/src/App/components/CoinModule2/index.css
+++ b/src/App/components/CoinModule2/index.css
@@ -31,15 +31,12 @@ table td {
 	border-left: none;
 	border-right: none;
 	border-bottom: none;
-	padding: 20px;
+	padding-right: 20px;
 }
-/*
-table td p {
-	text-decoration: underline;
-	padding-right: 8px;
-}*/
 
-table img {
+table td img {
+	-webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 	border-collapse: collapse; 
 	border-spacing: 0px;
 	border-left: none;
@@ -55,7 +52,17 @@ table th:first-child {
 	text-align: left;
 }
 
+table th:nth-child(2) {
+	text-align: center;
+}
+
 table td:first-child {
+	padding-left: 20px;
+	text-align: left;
+}
+
+table td:nth-child(2) {
+	padding: 0px;
 	text-align: left;
 }
 
